--- a/AgeOfPirates/src/ageofpirates/view/ConfigWindow.form
+++ b/AgeOfPirates/src/ageofpirates/view/ConfigWindow.form
@@ -102,7 +102,7 @@
         <Property name="useNullLayout" type="boolean" value="false"/>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="jLabel3">
+        <Component class="javax.swing.JLabel" name="lblSelectedElement">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="14" style="0"/>
