--- a/AgeOfPirates/src/ageofpirates/view/ConfigWindow.form
+++ b/AgeOfPirates/src/ageofpirates/view/ConfigWindow.form
@@ -185,6 +185,16 @@
             </Constraint>
           </Constraints>
         </Component>
+        <Component class="javax.swing.JButton" name="btnMarket">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Mercado"/>
+          </Properties>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+              <AbsoluteConstraints x="10" y="400" width="150" height="-1"/>
+            </Constraint>
+          </Constraints>
+        </Component>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="jPanel3">
