Carga del oceano del rival
Se carga los datos del océano del rival

--- a/AgeOfPirates/src/ageofpirates/view/GameWindow.form
+++ b/AgeOfPirates/src/ageofpirates/view/GameWindow.form
@@ -86,7 +86,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Container class="javax.swing.JPanel" name="pnlPlayersList">
+    <Container class="javax.swing.JPanel" name="pnlEnemies">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="cc" red="cc" type="rgb"/>
